--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "googleapis": "^61.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.1"
+    "mongoose": "^5.10.1",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
